# ai-tools-hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
skills/: anysearch.json
skills/universal-skill-converter/: README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  cli.rs  desk.rs  hub.rs  knowledge.rs  lib.rs  main.rs  memory.rs  personality.rs  pty_manager.rs  sandbox.rs  search.rs  skill_bundle.rs  subagent.rs  tool_layer.rs
src/components/: ToolCallBlock.tsx
