[package]
name = "ai-tools-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio-tungstenite = "0.24"
portable-pty = "0.9"


[build-dependencies]
tauri-build = { version = "2", features = [] }
